fixed footer list not aligning with text

--- a/style.css
+++ b/style.css
@@ -342,6 +342,7 @@ adapted from https://www.w3schools.com/cssref/tryit.php?filename=trycss3_media3*
 
 .footer li {
   margin: 20px;
+  margin-left: 0px;
 }
 
 .footer a:hover {
